add security schema swagger, config sanctum security
